--- a/portfolio.css
+++ b/portfolio.css
@@ -6,7 +6,12 @@
   body{
     font-family: Poppins;
     color: white;
-    
+    /* background-image: url("");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+     */
+     background-color:black;
   }
 
  
@@ -68,6 +73,7 @@ background-color: red;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin: 50px auto ;
     
     
     
@@ -119,7 +125,7 @@ margin-left: 20px;
     }
     /* about me starts here */
     #about{
-        background-color: white;
+        background-color: black;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -131,26 +137,30 @@ margin-left: 20px;
     }
 
     .aboutItem2{
-        background-color: white;
-        border-radius: 10px;
+        color: white;
         padding: 10px;
-        height: 400px;
+        height: 350px;
         width: 500px;
         margin-top: 10px;
         text-align: justify;
     }
-    .aboutItem2 p{
-        color: darkblue;
-    }
-    .aboutItem2 h2{
-    color: black;
-    font-size: 30px;
     
+    .aboutItem2 h2{
+    color: white;
+    font-size: 30px;
     }
+    .aboutItem2:hover{
+        border: 3px solid red;
+        border-radius: 5px;
+        transition: 1s;
+
+    }
+    
+    
     #works{
-        color: black;
-        
-        
+        color: white;
+        background-color: black;
+        margin: 50px auto;
         
     }
    
@@ -172,6 +182,7 @@ margin-left: 20px;
         border-radius: 8px;
         padding: 10px;
         margin: 9px;
+
         
         
     }
@@ -196,6 +207,11 @@ margin-left: 20px;
         border: 3px solid red;
         border-radius: 8px;
         margin: 9px;
+        
+    }
+
+    #myCard{
+        background-color: white;
         
     }
     .workButtons{
@@ -228,4 +244,50 @@ justify-content: center;
     #contact i{
         font-size: 30px;
         padding: 8px;
+        color: white;
+    }
+    /* if you want to make your website resposive on any device use @media
+    @media sreen and (min-width){
+        .title{
+            flex-direction: column;
+        }
+    }*/
+    @media screen and (max-width: 1000px){
+#home{
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-left: 10px;
+}
+.herotext{
+    margin-bottom: 20px;
+}
+.heroimage{
+    margin-top: 30px;
+    width: 300px;
+    margin: 0px;
+}
+.navigation{
+    flex-direction: column;
+    align-items: center;
+}
+#about{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.aboutItem1{
+    justify-self: center;
+    margin: 0%;
+}
+.serviceCards{
+    flex-direction: column;
+    align-items: center;
+}
+
+    }
+    @media screen and(max-width: 430px){
+        .aboutItem2{
+            width: auto;
+        }
     }
